LPD-44993 Fix LocalProcessExecutorTest by applying --add-opens to the sub-processes via JDK_JAVA_OPTIONS